Add: Strickland: Four centuries of trying to prove God’s existence. Effingham: Piers Morgan and Brian Cox debate the existence of God

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -137,26 +137,26 @@
       </p>
       <dl>
         <dt>Religion</dt>
-        <dd><q cite="https://en.wikipedia.org/w/index.php?title=Religion&oldid=696595830">a
+        <dd><q cite="https://en.wikipedia.org/w/index.php?title=Religion&amp;oldid=696595830">a
           <a href="https://en.wikipedia.org/wiki/Cultural_system">cultural system</a> of
           <a href="https://en.wikipedia.org/wiki/Religious_behaviour">behaviors</a> and
           <a href="https://en.wikipedia.org/wiki/Religious_practice">practices</a>,
           <a href="https://en.wikipedia.org/wiki/World_view">world views</a>, ethics, and
           <a href="https://en.wikipedia.org/wiki/Religious_organization">social organisation</a>
           that relate humanity to an order of existence</q>.
-          (<cite><a href="https://en.wikipedia.org/w/index.php?title=Religion&oldid=696595830">Wikipedia, 24.12.2015</a></cite>)
+          (<cite><a href="https://en.wikipedia.org/w/index.php?title=Religion&amp;oldid=696595830">Wikipedia, 24.12.2015</a></cite>)
         </dd>
         <dt>Faith</dt>
-        <dd><q cite="https://en.wikipedia.org/w/index.php?title=Faith&oldid=696137840">confidence or trust in a person or thing; or the observance of an obligation from loyalty; or fidelity to a person, promise, engagement;
+        <dd><q cite="https://en.wikipedia.org/w/index.php?title=Faith&amp;oldid=696137840">confidence or trust in a person or thing; or the observance of an obligation from loyalty; or fidelity to a person, promise, engagement;
           or <strong>a <a href="https://en.wikipedia.org/wiki/Belief">belief</a> not based on proof</strong>;
           or it may refer to a particular system of
           <a href="https://en.wikipedia.org/wiki/Religious_belief">religious belief</a></q>
           (emphasis added; &ldquo;a belief not based on proof&rdquo; is the essential part in this context).
-          (<cite><a href="https://en.wikipedia.org/w/index.php?title=Faith&oldid=696137840">Wikipedia, 24.12.2015</a></cite>)
+          (<cite><a href="https://en.wikipedia.org/w/index.php?title=Faith&amp;oldid=696137840">Wikipedia, 24.12.2015</a></cite>)
         </dd>
         <dt>Theism</dt>
-        <dd><q cite="https://en.wikipedia.org/w/index.php?title=Theism&oldid=695444639">the belief that at least one <a href="https://en.wikipedia.org/wiki/Deity">deity</a> exists</q>.
-        (<cite><a href="https://en.wikipedia.org/w/index.php?title=Theism&oldid=695444639">Wikipedia, 24.12.2015</a></cite>)</dd>
+        <dd><q cite="https://en.wikipedia.org/w/index.php?title=Theism&amp;oldid=695444639">the belief that at least one <a href="https://en.wikipedia.org/wiki/Deity">deity</a> exists</q>.
+        (<cite><a href="https://en.wikipedia.org/w/index.php?title=Theism&amp;oldid=695444639">Wikipedia, 24.12.2015</a></cite>)</dd>
       </dl>
 
       <p>Below are some references related to this type of confusion.</p>
@@ -385,6 +385,18 @@
           <a href="https://www.youtube.com/watch?v=Qm_6eB5bcos">Great Cost of the Kalam</a>
           (<i class="ytchannel">Rationality Rules</i> on YouTube, 8 minutes, 05.06.2020).
         </li>
+        <li>Strickland, Lloyd:
+          <a href="https://theconversation.com/four-centuries-of-trying-to-prove-gods-existence-101746">Four centuries of trying to prove God’s existence</a>,
+          <i class="website">The Conversation</i>, 17.08.2018 (Creative Commons).
+          <br />This article gives a brief overview of the development of attemps to prove God's existence.
+          Modern theologians and philosophers often try to demonstrate that belief in God is reasonable, a position that would be considered tame a few centuries ago,
+          when thinkers believed that they could present convincing proofs of God's existence.
+          <!--@@todo summarise / local copy; contains embedded YouTube video-->
+        </li>
+        <li>Effingham, Nikk:
+          <a href="https://theconversation.com/piers-morgan-and-brian-cox-debate-the-existence-of-god-a-philosophers-take-99401">Piers Morgan and Brian Cox debate the existence of God: a philosopher’s take</a>,
+          <i class="website">The Conversation</i>, 04.07.2018 (Creative Commons).
+        </li>
       </ul>
     </section>
 
@@ -609,7 +621,7 @@
           (<i class="website">Law &amp; Liberty</i>, 06.08.2019).
         </li>
         <li>Asma, Stephen T.:
-          <!-- https://en.wikipedia.org/wiki/Stephen_T._Asma -->
+          <!--https://en.wikipedia.org/wiki/Stephen_T._Asma -->
           <i class="booktitle">Why We Need Religion: An Agnostic Celebration of Spiritual Emotions</i>. Oxford: Oxford University Press, 2018.
           <a href="https://global.oup.com/academic/product/why-we-need-religion-9780190469672"><abbr>ISBN</abbr> 9780190469672</a>.
           <br />See also Nick Spencer's article
