--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1156,6 +1156,16 @@
           Cambridge University Press, 2016. (936 pages)
           <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/cambridge-history-eighteenth-century-political-thought?format=PB"><abbr>ISBN</abbr> 9781316630280</a>.
         </li>
+        <li>Jones, Gareth Stedman; Claeys, Gregory (editors):
+          <i class="booktitle">The Cambridge History of Nineteenth-Century Political Thought</i>. The Cambridge History of Political Thought.
+          Cambridge University Press, 2013. (1162 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/cambridge-history-nineteenth-century-political-thought?format=PB"><abbr>ISBN</abbr> 9781107676329</a>.
+        </li>
+        <li>Ball, Terence; Bellamy, Richard (editors):
+          <i class="booktitle">The Cambridge History of Twentieth-Century Political Thought</i>. The Cambridge History of Political Thought.
+          Cambridge University Press, 2006. (768 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/cambridge-history-twentieth-century-political-thought?format=PB"><abbr>ISBN</abbr> 9780521691628</a>.
+        </li>
         <li>Coman, Julian:
           <a href="https://www.theguardian.com/inequality/2020/dec/20/john-rawls-can-liberalisms-great-philosopher-come-to-the-wests-rescue-again">John Rawls: can liberalism's great philosopher come to the west's rescue again?</a>,
           <i class="newspaper">The Observer</i>, 20.12.2020.
