--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -492,6 +492,30 @@
           <br />See also the blog post
           <a href="https://www.panmacmillan.com/blogs/history/catherine-nixey-darkening-age-philosophers">Where did all the Philosophers go?</a> (04.06.2018).
         </li>
+        <li>Pocock, J. G. A.:
+          <i class="booktitle">Barbarism and Religion: Volume 1. The Enlightenments of Edward Gibbon, 1737–1764</i>. Cambridge University Press,  1999 (2001). (356 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/barbarism-and-religion-volume-1?format=PB"><abbr>ISBN</abbr> 9780521797597</a>.
+        </li>
+        <li>Pocock, J. G. A.:
+          <i class="booktitle">Barbarism and Religion: Volume 2. Narratives of Civil Government</i>. Cambridge University Press, 1999 (2001). (440 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/barbarism-and-religion-volume-2?format=PB"><abbr>ISBN</abbr> 9780521797603</a>.
+        </li>
+        <li>Pocock, J. G. A.:
+          <i class="booktitle">Barbarism and Religion: Volume 3. The First Decline and Fall</i>. Cambridge University Press, 2005. (544 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/barbarism-and-religion-volume-3?format=PB&amp;isbn=9780521672337"><abbr>ISBN</abbr> 9780521672337</a>.
+        </li>
+        <li>Pocock, J. G. A.:
+          <i class="booktitle">Barbarism and Religion: Volume 4. Barbarians, Savages and Empires</i>. Cambridge University Press, 2008. (388 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/barbarism-and-religion-volume-4?format=PB&amp;isbn=9780521721011"><abbr>ISBN</abbr> 9780521721011</a>.
+        </li>
+        <li>Pocock, J. G. A.:
+          <i class="booktitle">Barbarism and Religion: Volume 5. Religion: The First Triumph</i>. Cambridge University Press, 2015. (442 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/barbarism-and-religion-volume-5?format=PB&amp;isbn=9781107667921"><abbr>ISBN</abbr> 9781107667921</a>.
+        </li>
+        <li>Pocock, J. G. A.:
+          <i class="booktitle">Barbarism and Religion: Volume 6. Barbarism: Triumph in the West</i>. Cambridge University Press, 2018. (542 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/barbarism-and-religion-volume-6?format=PB"><abbr>ISBN</abbr> 9781107464360</a>.
+        </li>
         <li>Scruton, Roger:
           <i class="booktitle">The Soul of the World</i>. Princeton University Press, 2016. (216 pages)
           <a href="https://press.princeton.edu/titles/10188.html"><abbr>ISBN</abbr> 9781400850006</a>.
