Add: h2: Religious Texts

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -973,6 +973,19 @@
       </ul>
     </section>
 
+    <section>
+      <h2>Religious Texts</h2>
+      <p>Temporary section:</p>
+      <ul>
+        <li>
+          <a href="https://www.kingjamesbibleonline.org/">King James Bible Online</a>.
+        </li>
+        <li>
+          <a href="https://www.bibleserver.com/">BibleServer – Entdecke deine Bibel</a>.
+        </li>
+      </ul>
+    </section>
+
     <!--
     <section>
       <h2></h2>
