--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1166,6 +1166,18 @@
           Cambridge University Press, 2006. (768 pages)
           <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/cambridge-history-twentieth-century-political-thought?format=PB"><abbr>ISBN</abbr> 9780521691628</a>.
         </li>
+        <li>Skinner, Quentin:
+          <i class="booktitle">The Foundations of Modern Political Thought: Volume 1. The Renaissance</i>. Cambridge University Press, 1979. (330 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/foundations-modern-political-thought-volume-1?format=PB&amp;isbn=9780521293372"><abbr>ISBN</abbr> 9780521293372</a>.
+        </li>
+        <li>Skinner, Quentin:
+          <i class="booktitle">The Foundations of Modern Political Thought: Volume 2. The Age of Reformation</i>. Cambridge University Press, 1979. (414 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/foundations-modern-political-thought-volume-2?format=PB&amp;isbn=9780521294355"><abbr>ISBN</abbr> 9780521294355</a>.
+        </li>
+        <li>Brett, Annabel; Tully, James (editors):
+          <i class="booktitle">Rethinking The Foundations of Modern Political Thought</i>. Cambridge University Press, 2006. (310 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/rethinking-foundations-modern-political-thought?format=PB"><abbr>ISBN</abbr> 9780521615037</a>.
+        </li>
         <li>Coman, Julian:
           <a href="https://www.theguardian.com/inequality/2020/dec/20/john-rawls-can-liberalisms-great-philosopher-come-to-the-wests-rescue-again">John Rawls: can liberalism's great philosopher come to the west's rescue again?</a>,
           <i class="newspaper">The Observer</i>, 20.12.2020.
