Add: Booth: The Knowledge Most Worth Having

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -920,6 +920,10 @@
     <section>
       <h2>Miscellaneous Other Links</h2>
       <ul>
+        <li>Booth, Wayne C. (editor):
+          <i class="booktitle">The Knowledge Most Worth Having</i>. University of Chicago Press, 1967. (226 pages)
+          <a href="https://press.uchicago.edu/ucp/books/book/chicago/K/bo4342835.html"><abbr>ISBN</abbr> 9780226065762</a>.
+        </li>
         <li>Willinsky, John:
           <i class="booktitle">Technologies of Knowing: A Proposal for the Human Sciences</i>. Beacon Press, 2000. (224 pages)
           <a href="https://www.penguinrandomhouse.com/books/204179/technologies-of-knowing-by-john-willinsky/"><abbr>ISBN</abbr> 9780807061077</a>.
