--- a/lijst.html
+++ b/lijst.html
@@ -674,6 +674,10 @@
         <i class="booktitle">Literary Criticism in the 21st Century: Theory Renaissance</i>. Bloomsbury, 2014. (192 pages)
         <a href="https://www.bloomsbury.com/uk/literary-criticism-in-the-21st-century-9781472527707/"><abbr>ISBN</abbr> 9781472527707</a>.
       </li>
+      <li>Gazzaniga, Michael; Ivry, Richard B.; Mangun, George R.:
+        <i class="booktitle">Cognitive Neuroscience: The Bioogy of the Mind</i>. Fifth edition. Norton, 2019. (768 pages)
+        <a href="https://wwnorton.com/books/9780393603170"><abbr>ISBN</abbr> 978-0-393-66780-6 (paperback)</a>.<!--out of stock, 18.01.2021-->
+      </li>
     </ul>
     <!--
     <section>
