--- a/lijst.html
+++ b/lijst.html
@@ -24,20 +24,20 @@
     <h2>Navigation</h2>
     <ul>
       <li><a href="./index.html">Home</a></li>
-      <li class="notyet"><a href="./philscience/index.html">Philosophy of Science</a>
+      <li><a href="./philscience/index.html">Philosophy of Science</a>
         <ul>
           <li><a href="./philscience/fleck_ludwik.html" lang="de">Ludwig Fleck</a></li>
         </ul>
       </li>
-      <li class="notyet"><a href="./philosophy/index.html">Philosophy</a>
+      <li><a href="./philosophy/index.html">Philosophy</a>
         <ul>
           <li><a href="./philosophy/learningphilosophy.html">Learning Philosophy</a></li>
           <li><a href="../philosophy/thinking.html" title="Thinking, Including Critical Thinking">Thinking</a></li>
-          <!--li class="notyet"><a href="./philosophy/religion.html">Religion and Faith</a></li-->
+          <li><a href="./philosophy/religion.html">Religion and Faith</a></li>
           <li><a href="./philosophy/hegel_gwf.html">G.W.F. Hegel</a></li>
         </ul>
       </li>
-      <li class="notyet"><a href="./science/index.html">Science</a>
+      <li><a href="./science/index.html">Science</a>
         <ul>
           <li><a href="./science/ioannidis.html" 
             title="Ioannidis on why most published research findings are false">John Ioannidis</a>
@@ -45,10 +45,10 @@
           <li class="notyet"><a href="./science/mathematics.html">Mathematics &amp; Statistics</a></li>
           <li><a href="./science/machine-learning.html">Machine Learning</a></li>
           <li><a href="./science/doctoral-research.html">Dissertation / <abbr>PhD</abbr></a></li>
-          <!--li><a href="./science/hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a></li-->
+          <li><a href="./science/hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a></li>
         </ul>
       </li>
-      <li class="notyet"><a href="./humanities/index.html">Humanities</a>
+      <li><a href="./humanities/index.html">Humanities</a>
         <ul>
           <li><a href="./humanities/girard_rene.html" lang="fr">René Girard</a></li>
           <li><a href="./humanities/the-one-whose-name-must-not-be-mentioned.html">The Unnamable One</a></li>
@@ -74,7 +74,7 @@
         University of California Press, 2009. (344 pages)
         <a href="https://www.ucpress.edu/book/9780520259607/why-i-am-not-a-scientist"><abbr>ISBN</abbr> 9780520259607</a>.
       </li>
-      <li class="perhapsnot">Scholar, Richard:
+      <li>Scholar, Richard:
         <i class="booktitle">Montaigne and the Art of Free-Thinking</i>.
         Peter Lang, 2016. (234 pages)
         <a href="https://www.peterlang.com/view/product/11380"><abbr>ISBN</abbr> 9781906165208</a>.
@@ -105,12 +105,10 @@
         Garant, 2008.
         <a href="http://www.maklu.be/MakluEnGarant/BookDetails.aspx?id=9789044121667"><abbr>ISBN</abbr> 9789044121667</a>.
       </li>
-      <li class="perhapsnot">Ayer, A. J.: <i class="booktitle">Language, Truth and Logic</i>.
-        Dover.
+      <li>Ayer, A. J.: <i class="booktitle">Language, Truth and Logic</i>. Dover.
         <a href="http://store.doverpublications.com/0486200108.html"><abbr>ISBN</abbr> 9780486200101</a>. (? 10 €)
       </li>
-      <li class="perhapsnot">Ayer, A. J.: <i class="booktitle">Logical Positivism</i>.
-        Free Press, 1966.
+      <li>Ayer, A. J.: <i class="booktitle">Logical Positivism</i>. Free Press, 1966.
         <a href="http://www.simonandschuster.com/books/Logical-Positivism/A-J-Ayer/9780029011300"><abbr>ISBN</abbr> 978 00 29 01 13 00</a>. (? 25 €)
       </li>
       <li>Burger, Edward B.; Starbird, Michael: <i class="booktitle">The 5 Elements of Effective Thinking</i>.
@@ -131,11 +129,11 @@
         <strong><i class="booktitle">Against Method</i></strong>. Verso, 2010.
         <a href="https://www.versobooks.com/books/442-against-method"><abbr>ISBN</abbr> 978-1844674428</a>. (? 20 €)
       </li>
-      <li class="perhapsnot">Giere, Ronald N.: <i class="booktitle">Explaining Science: A Cognitive Approach</i>. [1988]
+      <li>Giere, Ronald N.: <i class="booktitle">Explaining Science: A Cognitive Approach</i>. [1988]
         University of Chicago Press, 1990. (344 pages)
         <a href="http://press.uchicago.edu/ucp/books/book/chicago/E/bo3622319.html"><abbr>ISBN</abbr> 978 02 26 29 20 69</a>. (? 20 €)
       </li>
-      <li class="perhapsnot">Goodman, Nelson: <i class="booktitle">Fact, Fiction, and Forecast</i>.
+      <li>Goodman, Nelson: <i class="booktitle">Fact, Fiction, and Forecast</i>.
         Harvard University Press, 1983.
         <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674290716"><abbr>ISBN</abbr> 978 06 74 29 07 16</a>. (? 18 €)
       </li>
@@ -144,11 +142,11 @@
         Edited by Tom L. Beauchamp. Oxford University Press, 1999. (304 pages)
         <a href="https://global.oup.com/academic/product/an-enquiry-concerning-human-understanding-9780198752486"><abbr>ISBN</abbr> 978-0-19-875248-6</a>. (? 25 €)</del>
       </li>
-      <li class="perhapsnot">Locke, John: <i class="booktitle">An Essay concerning Human Understanding</i>.
+      <li>Locke, John: <i class="booktitle">An Essay concerning Human Understanding</i>.
         Edited by Pauline Phemister. Oxford University Press, 2008. (576 pages)
         <a href="https://global.oup.com/academic/product/an-essay-concerning-human-understanding-9780199296620"><abbr>ISBN</abbr> 978-0-19-929662-0</a>. (? 16 €)
       </li>
-      <li class="perhapsnot">Medawar, Peter: <i class="booktitle">Advice To A Young Scientist</i>.
+      <li>Medawar, Peter: <i class="booktitle">Advice To A Young Scientist</i>.
         Alfred P. Sloan Foundation Series. Basic Books [Perseus Books Group], 1981.
         <abbr>ISBN</abbr> 0465000924. (? 19 €)
       </li>
@@ -156,12 +154,12 @@
         Random House/Atlantic Books, 2014.
         <a href="http://atlantic-books.co.uk/book/plato-at-the-googleplex/"><abbr>ISBN</abbr> 978 17 82 39 55 91</a> / 978 17 82 39 55 77. (? 25 €)
       </li>
-      <li class="perhapsnot">Osbeck, Lisa M.; Nersessian, Nancy J.; Malone, Kareen R.; Newstetter, Wendy C.:
+      <li>Osbeck, Lisa M.; Nersessian, Nancy J.; Malone, Kareen R.; Newstetter, Wendy C.:
         <i class="booktitle">Science as Psychology: Sense-Making and Identity in Science Practice</i>.
         Cambridge University Press, 2013.
         <a href="http://www.cambridge.org/de/academic/subjects/psychology/cognition/science-psychology-sense-making-and-identity-science-practice?format=PB"><abbr>ISBN</abbr> 978 05 21 70 84 18</a>. (? 30 €)
       </li>
-      <li class="perhapsnot">Popper, Karl: <i class="booktitle">Conjectures and Refutations: The Growth of Scientific Knowledge</i>.
+      <li>Popper, Karl: <i class="booktitle">Conjectures and Refutations: The Growth of Scientific Knowledge</i>.
         2nd edition. Routledge, 2002. (608 pages)
         <a href="https://www.routledge.com/Conjectures-and-Refutations-The-Growth-of-Scientific-Knowledge/Popper/p/book/9780415285940"><abbr>ISBN</abbr> 978-0-415-28594-0</a>. (? 21 €)
       </li>
@@ -185,7 +183,7 @@
         Routledge, 2009. (214 pages)
         <a href="https://www.routledge.com/Our-Knowledge-of-the-External-World/Russell/p/book/9780415473774"><abbr>ISBN</abbr> 978-0-415-47377-4</a>. (? 21 €)
       </li>
-      <li class="perhapsnot">Russell, Bertrand: <i class="booktitle">Sceptical Essays</i>.
+      <li>Russell, Bertrand: <i class="booktitle">Sceptical Essays</i>.
         2nd Edition. Routledge, 2009. (240 pages)
         <a href="https://www.routledge.com/Sceptical-Essays/Russell/p/book/9780415325080"><abbr>ISBN</abbr> 978-0-415-32508-0</a>. (? 22 €)
       </li>
@@ -197,13 +195,13 @@
       <li class="perhapsnot">Gress, David: <i class="booktitle">From Plato to <abbr>NATO</abbr></i>.
         Free Press, 1998, 2004. (624 pages)
         <a href="http://www.simonandschuster.com/books/From-Plato-to-NATO/David-Gress/9780743264884"><abbr>ISBN</abbr> 9780743264884</a>.
-        <!-- 
+        <!--
           * https://www.kirkusreviews.com/book-reviews/david-gress/from-plato-to-nato/
           * Steven Alan Samson: "David Gress: From Plato to NATO Study Guide": http://digitalcommons.liberty.edu/cgi/viewcontent.cgi?article=1093&context=gov_fac_pubs
           * Kwame Anthony Appiah: "There is no such thing as western civilisation", The Guardian, 9 November 2016: https://www.theguardian.com/world/2016/nov/09/western-civilisation-appiah-reith-lecture
         -->
       </li>
-      <li class="perhapsnot">Hobbes, Thomas: <i class="booktitle">Leviathan. With selected variants from the Latin edition of 1668</i>.
+      <li>Hobbes, Thomas: <i class="booktitle">Leviathan. With selected variants from the Latin edition of 1668</i>.
         Edited, with Introduction, by Edwin Curley. Hackett Publishing, 1994. (627 pages)
         <a href="https://www.hackettpublishing.com/leviathan"><abbr>ISBN</abbr> 978-0-87220-177-4</a>.
       </li>
@@ -211,7 +209,7 @@
         Routledge, 2017. (312 pages)
         <a href="https://www.routledge.com/From-the-Laboratory-to-the-Classroom-Translating-Science-of-Learning-for/Horvath-Lodge-Hattie/p/book/9781138649644"><abbr>ISBN</abbr> 9781138649644</a>.
       </li>
-      <li class="perhapsnot">Magee, Bryan: <i class="booktitle">Confessions of a Philosopher: A Personal Journey Through Western Philosophy from Plato to Popper</i>.
+      <li>Magee, Bryan: <i class="booktitle">Confessions of a Philosopher: A Personal Journey Through Western Philosophy from Plato to Popper</i>.
         Modern Library, 1999.
         <a href="http://www.penguinrandomhouse.com/books/106036/confessions-of-a-philosopher-by-bryan-magee/"><abbr>ISBN</abbr> 978-03 75 75 03 66</a>. (? 18 €)
       </li>
@@ -230,7 +228,7 @@
         <abbr>ISBN</abbr> 978-0141394534 / 
         <a href="http://www.penguinrandomhouse.com/books/274204/the-sleepwalkers-by-arthur-koestler/"><abbr>ISBN</abbr> 978-0140192469</a>. (? 19 €)
       </li>
-      <li class="perhapsnot">Lindberg, David C.: <i class="booktitle">The Beginnings of Western Science: The European Scientific Tradition in Philosophical, Religious, and Institutional Context, Prehistory to A.D. 1450</i>.
+      <li>Lindberg, David C.: <i class="booktitle">The Beginnings of Western Science: The European Scientific Tradition in Philosophical, Religious, and Institutional Context, Prehistory to A.D. 1450</i>.
         2nd edition. University of Chicago Press, 2008. (480 pages)
         <a href="http://press.uchicago.edu/ucp/books/book/chicago/B/bo5550077.html"><abbr>ISBN</abbr> 9780226482057</a>. (? 21 €)
       </li>
@@ -274,14 +272,14 @@
         <a href="https://www.penguinrandomhouse.com/books/586030/how-fascism-works-by-jason-stanley/"><abbr>ISBN</abbr> 9780525511830 (hardcover) / 9780525511854 (paperback)</a>.
         <!-- https://steinkopf-buchhandlung.buchkatalog.de/Product/3000001425887/63243/10002/-3/Buecher_Politik-und-Gesellschaft/Jason-Stanley/How-Fascism-Works/4099276460822241339/4099276460822241224/4099276460822241224 -->
       </li>
-      <li class="perhapsnot">Smith, Adam:
+      <li>Smith, Adam:
         <strong><i class="booktitle">An Inquiry into the Nature and Causes of the Wealth of Nations</i></strong>.
         Edited by Edwin Cannan. With a Preface by George J. Stigler.
         University of Chicago Press, 1977. (Volume 1: 524 pages; volume 2: 568 pages)
         <a href="http://www.press.uchicago.edu/ucp/books/book/chicago/I/bo3637045.html"><abbr>ISBN</abbr> 9780226763743</a>.
         <!--Smith's text is reprinted in UK spelling. Recommended by David Pakman: https://www.youtube.com/watch?v=WaUuT_bpPDQ -->
       </li>
-      <li class="perhapsnot">Evensky, Jerry:
+      <li>Evensky, Jerry:
         <i class="booktitle">Adam Smith's Wealth of Nations: A Reader's Guide</i>. Cambridge University Press, 2015. (293 pages)
         <a href="http://www.cambridge.org/de/academic/subjects/economics/history-economic-thought-and-methodology/adam-smiths-wealth-nations-readers-guide?format=PB"><abbr>ISBN</abbr> 978-1107653764</a>.
       </li>
@@ -302,13 +300,13 @@
           * https://www.hks.harvard.edu/centers/cid/publications/books/the-globalization-paradox-democracy-and-the-future-of-the-world-economy
         -->
       </li>
-      <li class="perhapsnot">Rodrik, Dani:
+      <li>Rodrik, Dani:
         <i class="booktitle">Economics Rules: The Rights and Wrongs of the Dismal Science</i>. Oxford University Press, 2017.
         <a href="https://global.oup.com/academic/product/economics-rules-9780198736905?q=economics%20rules"><abbr>ISBN</abbr>  9780198736905</a>.
         (W. W. Norton &amp; Company, 2016. <a href="http://books.wwnorton.com/books/detail.aspx?ID=4294992109"><abbr>ISBN</abbr> 978-0-393-35341-9</a>.)
         (See also <a href="http://www.lse.ac.uk/website-archive/newsAndMedia/videoAndAudio/channels/publicLecturesAndEvents/player.aspx?&am;id=3225">Economics Rules: the rights and wrongs of the dismal science</a> (video).)
       </li>
-      <li class="perhapsnot" lang="fr">Halimi, Serge&nbsp;: <a href="https://fr.wikipedia.org/wiki/Le_Grand_Bond_en_arri%C3%A8re"><i class="booktitle">Le Grand Bond en arrière&nbsp;: Comment l’ordre libéral s’est imposé au monde</i></a>. 2004.
+      <li lang="fr">Halimi, Serge&nbsp;: <a href="https://fr.wikipedia.org/wiki/Le_Grand_Bond_en_arri%C3%A8re"><i class="booktitle">Le Grand Bond en arrière&nbsp;: Comment l’ordre libéral s’est imposé au monde</i></a>. 2004.
         [Fayard, 2004] Nouvelle édition revue et actualisée par l’auteur. Agon, 2012. (792 pages)
         <a href="https://agone.org/elements/legrandbondenarriere/"><abbr>ISBN</abbr> 9782748900514</a>.
       </li>
@@ -375,7 +373,7 @@
         * ? Colin Dueck: The Obama Doctrine: American Grand Strategy Today. Oxford UP, 2015: https://global.oup.com/academic/product/the-obama-doctrine-9780190202620
         * Hans Christoph Binswanger (1929 – 2018): https://de.wikipedia.org/wiki/Hans_Christoph_Binswanger
       -->
-      <li class="perhapsnot" lang="fr">Michéa, Jean-Claude: <i class="booktitle">Notre ennemi, le capital</i>.
+      <li lang="fr">Michéa, Jean-Claude: <i class="booktitle">Notre ennemi, le capital</i>.
         Flammarion, 2017.
         <a href="http://editions.flammarion.com/Albums_Detail.cfm?ID=50454&amp;levelCode=home"><abbr>ISBN</abbr> 9782081395602</a>.
       </li>
@@ -393,7 +391,7 @@
         <i class="booktitle">Treasure Islands: Tax Havens and the Men who Stole the World</i>.
         Vintage, 2012. (384 pages)
         <a href="https://www.penguin.co.uk/books/1085201/treasure-islands/9780099541721/"><abbr>ISBN</abbr> 978 0099541721</a>.
-        <!-- Mentioned by Mark Blyth at https://www.youtube.com/watch?v=KSYb6RbuOG0  -->
+        <!--Mentioned by Mark Blyth at https://www.youtube.com/watch?v=KSYb6RbuOG0  -->
       </li>
       <li class="perhapsnot">Hamilton, Clive:
         <i class="booktitle">Silent Invasion: China's Influence in Australia</i>. Hardle Grant, 2018. (376 pages)
@@ -402,11 +400,11 @@
         China Uncensored: <a href="https://www.youtube.com/watch?v=E5vUaCj0QGI">China's Growing Influence on the West and Its Politics</a> (YouTube, 24 minutes, 23.03.2018) and
         Andrew Podger: <a href="https://theconversation.com/book-review-clive-hamiltons-silent-invasion-chinas-influence-in-australia-93650">Book review – Clive Hamilton’s Silent Invasion: China’s Influence in Australia</a> (<i class="website">The Conversation</i>, 21.03.2018).
       </li>
-      <li class="perhapsnot" lang="fr">Lemoine, Françoise:
+      <li lang="fr">Lemoine, Françoise:
         <i class="booktitle">L'économie de la Chine</i>. Collection Repères. La Découverte, 2006. (128 pages)
         <a href="https://www.collectionreperes.com/catalogue/index-L___conomie_de_la_Chine-9782707149336.html"><abbr>ISBN</abbr> 9782707149336</a>.
       </li>
-      <li class="perhapsnot" lang="fr">Renard, Mary-Françoise:
+      <li lang="fr">Renard, Mary-Françoise:
         <i class="booktitle">L'économie de la Chine</i>. Collection Repères. La Découverte, 2018. (128 pages)
         <a href="https://www.collectionreperes.com/catalogue/index-L___conomie_de_la_Chine-9782707192127.html"><abbr>ISBN</abbr> 9782707192127</a>.
       </li>
@@ -443,7 +441,7 @@
         Penguin, 2002. (576 pages)
         <a href="https://www.penguin.co.uk/books/33717/the-metamorphoses/9780140422306/"><abbr>ISBN</abbr> 978-0140422306</a>.
       </li>
-      <li class="perhapsnot">Craig, Hugh; Kinney, Arthur F. (editors): <i class="booktitle">Shakespeare, Computers, and the Mystery of Authorship</i>.
+      <li>Craig, Hugh; Kinney, Arthur F. (editors): <i class="booktitle">Shakespeare, Computers, and the Mystery of Authorship</i>.
         Cambridge University Press, 2012.
         <a href="http://www.cambridge.org/de/academic/subjects/literature/english-literature-general-interest/shakespeare-computers-and-mystery-authorship?format=PB"><abbr>ISBN</abbr> 9781107407084</a>.
       </li>
@@ -521,11 +519,11 @@
         Cannongate Books, 2014. (273 pages)
         <a href="https://canongate.co.uk/books/1924-mastermind-how-to-think-like-sherlock-holmes/"><abbr>ISBN</abbr> [978-0857867278]</a>.</del>
       </li>
-      <li class="perhapsnot">Haidt, Jonathan:
+      <li>Haidt, Jonathan:
         <i class="booktitle">The Righteous Mind: Why Good People are Divided by Politics and Religion</i>. Vintage (Penguin), 2013. (528 pages)
         <a href="https://www.penguin.co.uk/books/56726/the-righteous-mind/9780141039169/"><abbr>ISBN</abbr> 9780141039169</a>.
       </li>
-      <li class="perhapsnot">Peterson, Jordan B.:
+      <li>Peterson, Jordan B.:
         <i class="booktitle">Maps of Meaning: The Architecture of Belief</i>. Routledge, 1999. (564 pages)
         <a href="https://www.routledge.com/Maps-of-Meaning-The-Architecture-of-Belief/Peterson/p/book/9780415922227"><abbr>ISBN</abbr> 9780415922227</a>.
         <br />See also the Wikipedia article
