Add: Early Science Lab

--- a/science/index.html
+++ b/science/index.html
@@ -471,6 +471,11 @@
           <a href="https://www.cambridge.org/de/academic/subjects/general-science/series/shorter-science-and-civilisation-china">The Shorter Science and Civilisation in China</a>:
           a shortened version of the above published in 1995.
         </li>
+        <li>
+          <a href="https://web.stanford.edu/class/history13/earlysciencelab/main/">Early Science Lab</a>,
+          <i class="website">Stanford University</i>.
+          <br />Website created by Paula Findlen and Rebecca Bence.
+        </li>
         <!--See also
           * G. E. R. Lloyd: https://en.wikipedia.org/wiki/G._E._R._Lloyd
           * Nathan Sivin: https://en.wikipedia.org/wiki/Nathan_Sivin
