Add h2 for Hannah Arendt

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1136,6 +1136,24 @@
             These thinkers remade political philosophy in ways that influenced not only their own trajectory but also that of their critics.
           </q>
         </li>
+        <li>Cah, Steven (editor):
+          <i class="booktitle">Political Philosophy: The Essential Texts</i>. Third edition. Oxford University Press, 2015. (1152 pages)
+          <a href="https://global.oup.com/academic/product/political-philosophy-9780190201081"><abbr>ISBN</abbr> 9780190201081</a>.
+        </li>
+        <li>Sandel, Michael J.:
+          <i class="booktitle">Justice: What's the Right Thing to Do?</i>. Farrar, Strauss &amp; Giroux, 2010. (320 pages)
+          <a href="https://us.macmillan.com/books/9780374532505"><abbr>ISBN</abbr> 9780374532505</a>.
+          <br />According to the <a href="https://en.wikipedia.org/wiki/Justice:_What%27s_the_Right_Thing_to_Do%3F">Wikipedia article about <i class="booktitle">Justice</i></a>
+          <q>The work was written to accompany Sandel's famous "Justice" course at Harvard University which he has taught for more than thirty years and which has been offered online and in various TV summary versions.
+          There is also an accompanying sourcebook of readings: <i class="booktitle">Justice: A Reader</i>.</q>
+          <br />See also <a href="https://scholar.harvard.edu/sandel/justice">Justice | Michael J. Sandel</a> (Harvard University).
+          <!--See also https://web.archive.org/web/20071213161758/http://athome.harvard.edu/programs/jmr/ -->
+        </li>
+        <li>Sandel, Michael J. (editor):
+          <i class="booktitle">Justice: A Reader</i>. Oxford University Press, 2007. (432 pages)
+          <a href="https://global.oup.com/academic/product/justice-9780195335125"><abbr>ISBN</abbr> 9780195335125</a>.
+        </li>
+        <!--@@todo check more books from OUP: https://global.oup.com/academic/search?q=Political+Philosophy&cc=de&lang=en -->
         <li>Rowe, Christopher; Schofield, Malcolm (editors):
           <i class="booktitle">The Cambridge History of Greek and Roman Political Thought</i>. The Cambridge History of Political Thought.
           Cambridge University Press, 2005. (766 pages)
@@ -1384,6 +1402,12 @@
           <i class="website">New Discourses</i>, 03.02.2020.
           <!--Claims that "These theorists sometimes referred to themselves as “cultural Marxists”, ..."???-->
         </li>
+        <li>Gordon, Peter E.:
+          <a href="https://www.thenation.com/article/politics/adorno-aspects-new-right-wing-extremism/">The Scars of Democracy: Theodor Adorno and the crises of liberalism</a>,
+          <i class="magaziine">The Nation</i>, 15.12.2020.
+          <br />Jason Stanley tweeted this article saying,
+          <q cite="https://twitter.com/jasonintrator/status/1338887478929973250">By the greatest living intellectual historian of 20th Century Germany, Peter Gordon, here is by far the best contribution yet penned on the contemporary debate about fascism, explaining the 20th century philosophical history of engagement with fascism.</q>
+        </li>
       </ul>
     </section>
 
@@ -1410,6 +1434,20 @@
           <a href="https://www.plato-dialogues.org/fr/plato.htm" hreflang="fr">Platon et ses dialogues: liste des oeuvres de Platon</a>,
           <i class="website">Platon et ses dialogues</i>, 29.11.1997; last updated on 22.01.2019.
         </li>
+        <li>Lane, Melissa:
+          <a href="https://fivebooks.com/best-books/plato-melissa-lane/">The Best Plato Books</a>,
+          <i class="website">Five Books</i>, 14.07.2014, updated on 01.06.2020.
+          <br />Lane, whose publications include <i class="booktitle">Greek and Roman Political Ideas: A Pelican Introduction</i>
+          and <i class="booktitle">Plato's Progeny: How Plato and Socrates Still Captivate the Modern Mind</i>, recommends the following books:
+          <ul>
+            <li><i class="booktitle">Political Dissent in Democratic Athens</i> by Josiah Ober,</li>
+            <li><i class="booktitle">The Republic</i> by Plato,</li>
+            <li><i class="booktitle">Why Plato Wrote</i> by Danielle Allen,</li>
+            <li><i class="booktitle">Preface to Plato</i> by Eric A. Havelock,</li>
+            <li><i class="booktitle">Statesman</i> by Plato (<q>a very neglected dialogue of Plato’s</q>).</li>
+          </ul>
+        </li>
+        <!--see also Socrates books: https://fivebooks.com/best-books/socrates/ -->
       </ul>
 
       <h3>Aristotle (384 – 322 <abbr>BC</abbr>)</h3>
@@ -1730,6 +1768,30 @@
         </li>
       </ul>
 
+      <h3>Hannah Arendt (1906 – 1975)</h3>
+      <ul>
+        <li>Hill, Samantha Rose:
+          <a href="https://fivebooks.com/best-books/hannah-arendt-samantha-rose-hill/">The best books on Hannah Arendt</a>,
+          <i class="website">Five Books</i>, 05.06.2020. Samantha Rose Hill recommends the following books:
+          <ul>
+            <li><i class="booktitle">The Origins of Totalitarianism</i> by Hannah Arendt,</li>
+            <li><i class="booktitle">The Human Condition</i> by Hannah Arendt,</li>
+            <li><i class="booktitle">Men in Dark Times</i> by Hannah Arendt,</li>
+            <li><i class="booktitle">Thinking Without a Banister</i> by Hannah Arendt,</li>
+            <li><i class="booktitle">Hannah Arendt: For Love of the World</i> by Elisabeth.</li>
+          </ul>
+        </li>
+        <li>Hill, Samantha Rose:
+          <a href="https://aeon.co/essays/for-hannah-arendt-totalitarianism-is-rooted-in-loneliness">Where loneliness can lead / For Hannah Arendt, totalitarianism is rooted in loneliness</a>,
+          <i class="website">Aeon</i>, 16.10.2020.
+        </li>
+        <li>Hill, Samantha Rose:
+          <a href="https://samantharosehill.substack.com/p/on-evil">On evil: Hannah Arendt's concept the banality of evil</a>,
+          <i class="blog">Illuminations by Samantha Rose Hill</i>, 14.01.2021.
+          <!--Referrer: Nigel Warburton: https://twitter.com/philosophybites/status/1350016741083131904 -->
+        </li>
+      </ul>
+
       <h3>Louis Althusser (1918 – 1990)</h3>
       <ul>
         <li><span lang="fr">Althusser, Louis:
@@ -2016,10 +2078,6 @@
           <a href="https://www.youtube.com/watch?v=Rnmfe6qskRY">Did the Sokal affair "destroy postmodernism"?</a>
           (YouTube, 10 minutes, 21.05.2018).
           <!--@@rewatch; see also comment at https://www.youtube.com/watch?v=Rnmfe6qskRY&lc=UgzvM-MIbUrYrt5lvJ14AaABAg -->
-        </li>
-        <li>Hill, Samantha Rose:
-          <a href="https://aeon.co/essays/for-hannah-arendt-totalitarianism-is-rooted-in-loneliness">Where loneliness can lead / For Hannah Arendt, totalitarianism is rooted in loneliness</a>,
-          <i class="website">Aeon</i>, 16.10.2020.
         </li>
       </ul>
     </section>
@@ -2338,18 +2396,6 @@
             </li>
           </ul>
         </li>
-        <li>Ben-Ghiat, Ruth:
-          <a href="https://fivebooks.com/best-books/fascism-ruth-ben-ghiat/">The best books on Fascism</a>,
-          <i class="website">Five Books</i>, 01.06.2019.
-          <br />Ben-Ghiat, author of <i class="booktitle">Fascist Modernities</i>, recommends the following books:
-          <ul>
-          <li><i class="booktitle">Anatomy of Fascism</i> by Robert O. Paxton,</li>
-          <li><i class="booktitle">Fascist Spectacle</i> by Simonetta Falasca-Zamponi,</li>
-          <li><i class="booktitle">The Origins of Nazi Violence</i> by Enzo Traverso and Janet Lloyd,</li>
-          <li><i class="booktitle">The Origins of Totalitarianism</i> by Hannah Arendt,</li>
-          <li><i class="booktitle">Family Lexicon</i> by Natalia Ginzburg.</li>
-          </ul>
-        </li>
         <li>Harris, Elizabeth:
           <a href="https://fivebooks.com/best-books/best-books-buddhism-elizabeth-harris/">The Best Introductions to Buddhism</a>,
           <i class="website">Five Books</i>, 17.06.2010. Elizabeth Harris, author of <i class="booktitle">What Buddhists Believe</i>,
@@ -2373,17 +2419,6 @@
             <li><i class="booktitle">Words of My Pefect Teacher</i> by Patrul Rinpoche,</li>
             <li><i class="booktitle">Journey to the West</i>, translated by Anthony Yu
             (and Xuanzang's <i class="booktitle">Great Tang Records on the Western Regions</i>).</li>
-          </ul>
-        </li>
-        <li>Hill, Samantha Rose:
-          <a href="https://fivebooks.com/best-books/hannah-arendt-samantha-rose-hill/">The best books on Hannah Arendt</a>,
-          <i class="website">Five Books</i>, 05.06.2020. Samantha Rose Hill recommends the following books:
-          <ul>
-            <li><i class="booktitle">The Origins of Totalitarianism</i> by Hannah Arendt,</li>
-            <li><i class="booktitle">The Human Condition</i> by Hannah Arendt,</li>
-            <li><i class="booktitle">Men in Dark Times</i> by Hannah Arendt,</li>
-            <li><i class="booktitle">Thinking Without a Banister</i> by Hannah Arendt,</li>
-            <li><i class="booktitle">Hannah Arendt: For Love of the World</i> by Elisabeth.</li>
           </ul>
         </li>
       </ul>
