Add: Goldrick: 6 tips for teaching yourself philosophy

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -349,7 +349,7 @@
       Peter Singer (Animal Liberation; ...).
     -->
     <h4>Other Resources on the History of Philosophy</h4>
-    <p>Books</p>:
+    <p>Books:</p>
     <ul>
       <li>Grayling, A. C.:
         <i class="booktitle">The History of Philosophy</i>.
@@ -357,8 +357,8 @@
         <a href="https://www.penguin.co.uk/books/305362/the-history-of-philosophy/9780241304549.html"><abbr>ISBN</abbr> 9780241304549</a>.
       </li>
       <li><span lang="de">
-        <i class="title">Kindler Kompakt Philosophie 19.Jahrhundert</i>. Ausgewählt von Jan Urbich. Metzler, 2016</span>. (206 pages)
-        <abbr>ISBN</abbr> 978 3 476 04066 4.<!--www.metzlerverlag.de-->
+        <i class="booktitle">Kindler Kompakt Philosophie 19. Jahrhundert</i>. Ausgewählt von Jan Urbich. Metzler, 2016</span>. (206 pages)
+        <a href="https://www.springer.com/de/book/9783476055361#otherversion=9783476040664"><abbr>ISBN</abbr> 978 3 476 04066 4 (or 978 3 476 05536 1 (e-book))</a>.<!--www.metzlerverlag.de-->
         <br />This book covers 36 philosophers from <span lang="de">Fichte</span> to <span lang="de">Rickert</span>,
         mostly coming from German-speaking countries. Most philosophers are covered on two to four pages;
         other philosophers, notably <span lang="de">Hegel</span>, <span lang="de">Nietzsche</span> are treated in more detail.
@@ -535,6 +535,10 @@
         <a href="https://www.youtube.com/watch?v=xgf2jztjaF4"><abbr>FAQ</abbr>: <abbr>Dr</abbr> Sadler Responds #8 - You Have To Read The Actual Philosophical Text</a>
         (<i class="ytchannel">Gregory B. Sadler</i> on YouTube, 9 minutes, 30.01.2020.
         <!--Sadler's website: https://reasonio.wordpress.com/ -->
+      </li>
+      <li>Goldrick, Leah:
+        <a href="https://brainfodder.org/teach-yourself-philosophy/">6 tips for teaching yourself philosophy</a>,
+        <i class="website">Brain Fodder</i>, 18.06.2016.
       </li>
       <li>
         <a href="https://www.youtube.com/watch?v=-9y6x2vmhM4">How To Use Knowledge To Transform Yourself</a>
