Add: books by P. Boghossian and by Cragun; Bible in Dutch

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -124,6 +124,10 @@
           <a href="https://www.psychologytoday.com/blog/the-human-beast/201107/why-atheism-will-replace-religion-new-evidence">Why Atheism Will Replace Religion: New Evidence</a>,
           <i class="blog">The Human Beast</i> (a blog on <i class="website">Psychology Today</i>), 14.07.2011.
         </li>
+        <li>Lindsay, Ronald A.:
+          <i class="booktitle">The Necessity of Secularism: Why God Can't Tell Us What We Do</i>. Pitchstone Publishing, 2014. (224 pages)
+          <a href="https://www.pitchstonebooks.com/catalog/the-necessity-of-secularism"><abbr>ISBN</abbr> 9781939578129</a>.
+        </li>
       </ul>
     </section>
 
@@ -305,6 +309,10 @@
         <li>Mithen, Steven: <i class="booktitle">The Prehistory Of The Mind: A Search for the Origins of Art, Religion and Science</i>. [1996] London: Thames and Hudson, 2003.
           <abbr>ISBN</abbr> 0 75380 204 X.
         </li>
+        <li>Thomson, J. Anderson; Aukofer, Clare:
+          <i class="booktitle">Why We Believe in God(s): A Concise Guide to the Science of Faith</i>. Pitchstone Publishing, 2011. (144 pages)
+          <a href="https://www.pitchstonebooks.com/catalog/why-we-believe-in-gods"><abbr>ISBN</abbr> 9780984493210</a>.
+        </li>
         <li>Thrower, James:
           <i class="booktitle">The Alternative Tradition: Religion and the Rejection of Religion in the Ancient World</i>.  [1980] Religion and Society, Volume: 18. De Gruyter, 2011 (reprint).
           <a href="https://www.degruyter.com/view/title/6049?rskey=KRSJuh&amp;result=1"><abbr>ISBN</abbr> 978-90-279-7997-1</a>.<!-- From  €109.95  -->
@@ -331,6 +339,30 @@
         <li>
           <a href="https://en.wikipedia.org/wiki/Prehistoric_religion">Prehistoric religion</a>
           (Wikipedia).
+        </li>
+        <li>Pocock, J. G. A.:
+          <i class="booktitle">Barbarism and Religion: Volume 1. The Enlightenments of Edward Gibbon, 1737–1764</i>. Cambridge University Press,  1999 (2001). (356 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/barbarism-and-religion-volume-1?format=PB"><abbr>ISBN</abbr> 9780521797597</a>.
+        </li>
+        <li>Pocock, J. G. A.:
+          <i class="booktitle">Barbarism and Religion: Volume 2. Narratives of Civil Government</i>. Cambridge University Press, 1999 (2001). (440 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/barbarism-and-religion-volume-2?format=PB"><abbr>ISBN</abbr> 9780521797603</a>.
+        </li>
+        <li>Pocock, J. G. A.:
+          <i class="booktitle">Barbarism and Religion: Volume 3. The First Decline and Fall</i>. Cambridge University Press, 2005. (544 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/barbarism-and-religion-volume-3?format=PB&amp;isbn=9780521672337"><abbr>ISBN</abbr> 9780521672337</a>.
+        </li>
+        <li>Pocock, J. G. A.:
+          <i class="booktitle">Barbarism and Religion: Volume 4. Barbarians, Savages and Empires</i>. Cambridge University Press, 2008. (388 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/barbarism-and-religion-volume-4?format=PB&amp;isbn=9780521721011"><abbr>ISBN</abbr> 9780521721011</a>.
+        </li>
+        <li>Pocock, J. G. A.:
+          <i class="booktitle">Barbarism and Religion: Volume 5. Religion: The First Triumph</i>. Cambridge University Press, 2015. (442 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/barbarism-and-religion-volume-5?format=PB&amp;isbn=9781107667921"><abbr>ISBN</abbr> 9781107667921</a>.
+        </li>
+        <li>Pocock, J. G. A.:
+          <i class="booktitle">Barbarism and Religion: Volume 6. Barbarism: Triumph in the West</i>. Cambridge University Press, 2018. (542 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/barbarism-and-religion-volume-6?format=PB"><abbr>ISBN</abbr> 9781107464360</a>.
         </li>
       </ul>
     </section>
@@ -486,35 +518,27 @@
         <li>Wikipedia:
           <a href="https://en.wikipedia.org/wiki/Religiosity_and_intelligence">Religiosity and intelligence</a>.
         </li>
+        <li>Boghossian, Peter:
+          <i class="booktitle">A Manual for Creating Atheists</i>. Pitchstone Publishing, 2013. (280 pages)
+          <a href="https://www.pitchstonebooks.com/catalog/a-manual-for-creating-atheists"><abbr>ISBN</abbr> 9781939578099</a>.
+        </li>
+        <li>Boghossian, Peter; Lindsay, James:
+          <i class="booktitle">How to Have Impossible Conversations: A Very Practical Guide</i>. Da Capo, 2019. (272 pages)
+          <a href="https://www.hachettebookgroup.com/titles/peter-boghossian/how-to-have-impossible-conversations/9780738285320/"><abbr>ISBN</abbr> 9780738285320</a>.
+        </li>
+        <li>Cragun, Ryan T.:
+          <i class="booktitle">How to Defeat Religion in 10 Easy Steps</i>. Pitchstone Publishing, 2015. (200 pages)
+          <a href="https://www.pitchstonebooks.com/catalog/how-to-defeat-religion-in-10-easy-steps"><abbr>ISBN</abbr> 9781634310123</a>.
+        </li>
+        <li>Cragun, Ryan T.:
+          <i class="booktitle">What You Don't Know about Religion (but Should)</i>. Pitchstone Publishing, 2013. (278 pages)
+          <a href="https://www.pitchstonebooks.com/catalog/what-you-dont-know-about-religion-but-should"><abbr>ISBN</abbr> 9780985281533</a>.
+        </li>
         <!--@@more: https://duckduckgo.com/?q=helmuth+nyborg+intelligence+religion&ia=web -->
         <li>Nixey, Catherine: <i class="booktitle">The Darkening Age: The Christian Destruction of the Classical World</i>. Pan Macmillan, 2018. (352 pages)
           <a href="https://www.panmacmillan.com/authors/catherine-nixey/the-darkening-age/9781509816071"><abbr>ISBN</abbr> 9781509816071</a>.
           <br />See also the blog post
           <a href="https://www.panmacmillan.com/blogs/history/catherine-nixey-darkening-age-philosophers">Where did all the Philosophers go?</a> (04.06.2018).
-        </li>
-        <li>Pocock, J. G. A.:
-          <i class="booktitle">Barbarism and Religion: Volume 1. The Enlightenments of Edward Gibbon, 1737–1764</i>. Cambridge University Press,  1999 (2001). (356 pages)
-          <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/barbarism-and-religion-volume-1?format=PB"><abbr>ISBN</abbr> 9780521797597</a>.
-        </li>
-        <li>Pocock, J. G. A.:
-          <i class="booktitle">Barbarism and Religion: Volume 2. Narratives of Civil Government</i>. Cambridge University Press, 1999 (2001). (440 pages)
-          <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/barbarism-and-religion-volume-2?format=PB"><abbr>ISBN</abbr> 9780521797603</a>.
-        </li>
-        <li>Pocock, J. G. A.:
-          <i class="booktitle">Barbarism and Religion: Volume 3. The First Decline and Fall</i>. Cambridge University Press, 2005. (544 pages)
-          <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/barbarism-and-religion-volume-3?format=PB&amp;isbn=9780521672337"><abbr>ISBN</abbr> 9780521672337</a>.
-        </li>
-        <li>Pocock, J. G. A.:
-          <i class="booktitle">Barbarism and Religion: Volume 4. Barbarians, Savages and Empires</i>. Cambridge University Press, 2008. (388 pages)
-          <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/barbarism-and-religion-volume-4?format=PB&amp;isbn=9780521721011"><abbr>ISBN</abbr> 9780521721011</a>.
-        </li>
-        <li>Pocock, J. G. A.:
-          <i class="booktitle">Barbarism and Religion: Volume 5. Religion: The First Triumph</i>. Cambridge University Press, 2015. (442 pages)
-          <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/barbarism-and-religion-volume-5?format=PB&amp;isbn=9781107667921"><abbr>ISBN</abbr> 9781107667921</a>.
-        </li>
-        <li>Pocock, J. G. A.:
-          <i class="booktitle">Barbarism and Religion: Volume 6. Barbarism: Triumph in the West</i>. Cambridge University Press, 2018. (542 pages)
-          <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/barbarism-and-religion-volume-6?format=PB"><abbr>ISBN</abbr> 9781107464360</a>.
         </li>
         <li>Scruton, Roger:
           <i class="booktitle">The Soul of the World</i>. Princeton University Press, 2016. (216 pages)
@@ -818,6 +842,10 @@
           <br />This is an excerpt from Roth's novel <i class="booktitle">Indignation</i> (2008), translated by <span lang="fr">Marie-Claire Pasquier</span>.
           The text relies heavily on Bertrand Russell's <a href="https://en.wikipedia.org/wiki/Why_I_Am_Not_a_Christian">Why I Am Not a Christian</a>.
         </li>
+        <li>Bekius, Drew:
+          <i class="booktitle">The Rise and Fall of Faith: A God-to-Godless Story for Christians and Atheists</i>. Pitchstone Press, 2017. (207 pages)
+          <a href="https://www.pitchstonebooks.com/catalog/the-rise-and-fall-of-faith"><abbr>ISBN</abbr> 9781634311106</a>.
+        </li>
         <li>
           <a href="https://www.learnreligions.com/">Learn Religions - Guide to the Beliefs and Religions of the World</a>.
         </li>
@@ -983,6 +1011,22 @@
         <li>
           <a href="https://www.bibleserver.com/">BibleServer – Entdecke deine Bibel</a>.
         </li>
+        <li>
+          <a href="https://www.naardensebijbel.nl/" hreflang="nl" lang="nl">De Naardense Bijbel 2014</a>.
+        </li>
+        <li>
+          <a href="https://www.statenvertaling.net/" hreflang="nl" lang="nl">Statenvertaling online</a>.
+        </li>
+        <li>
+          <a href="https://www.online-bijbel.nl/" hreflang="nl" lang="nl">Online-Bijbel.nl</a>.
+        </li>
+        <li><span lang="nl">
+          <a href="https://www.vlaamsebijbelstichting.be/?p=287" hreflang="nl">Bijbelvertalingen online</a>,
+          <i class="website">Vlaamse Bijbelstichting</i></span> (no date).
+        </li>
+        <li>
+          <a href="https://newchristianbiblestudy.org/">New Christian Bible Study</a>.
+        </li>
       </ul>
     </section>
 
@@ -994,8 +1038,13 @@
           <a href=""></a>,
           <i class=""></i>,
         </li>
-        <li>: <i class="booktitle"></i>.
+        <li>:
+          <i class="booktitle"></i>.
           <a href=""><abbr>ISBN</abbr> </a>.
+        </li>
+        <li>
+          <a href=""></a>
+          (<i class="ytchannel"></i> on YouTube, minutes, ).
         </li>
       </ul>
     </section>
