--- a/lijst.html
+++ b/lijst.html
@@ -676,6 +676,10 @@
         <i class="booktitle">Cognitive Neuroscience: The Bioogy of the Mind</i>. Fifth edition. Norton, 2019. (768 pages)
         <a href="https://wwnorton.com/books/9780393603170"><abbr>ISBN</abbr> 978-0-393-66780-6 (paperback)</a>.<!--out of stock, 18.01.2021-->
       </li>
+      <li>Sandel, Michael J.:
+        <i class="booktitle">Justice: What's the Right Thing to Do?</i>. Farrar, Strauss &amp; Giroux, 2010. (320 pages)
+        <a href="https://us.macmillan.com/books/9780374532505"><abbr>ISBN</abbr> 9780374532505</a>.
+      </li>
     </ul>
     <!--
     <section>
@@ -687,7 +691,7 @@
         <li> : <i class="booktitle"></i>.
           <abbr>ISBN</abbr>.
         </li>
-        <li>
+        <li>:
           <i class="booktitle"></i>.
           <a href=""><abbr>ISBN</abbr> </a>.
         </li>
