Add: Monk; Taiwo

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2701,7 +2701,6 @@
           <blockquote>This is, ultimately, a generous book that reaches beyond the initial charges of racism and essentialist ethnocentrism to show constructively how non-Western philosophies can be brought into fruitful interaction with the Western philosophical canon.
           While some of it engages with social and political issues well beyond the academy, it should be taken seriously as both a diagnosis of a significant intellectual problem within American colleges and universities and as a concrete prescription for a better way.</blockquote>
         </li>
-        <!--Dabashi, Hamid: Can Non-Europeans Think? Zed Books, 2015-->
         <li>Benjamin, Marina:
           <a href="https://aeon.co/ideas/how-schopenhauers-thought-can-illuminate-a-midlife-crisis">How Schopenhauer’s thought can illuminate a midlife crisis</a>,
           <i class="website">Aeon</i>, 26.01.2018. (Licence: Creative Commons Attribution No Derivatives (<abbr>CC-BY-ND</abbr>.)
@@ -2966,6 +2965,19 @@
         <li><span lang="fr">
           <a href="https://la-philosophie.com/films-philosophiques" hreflang="fr">Les Films Philosophiques</a>,
           <i class="website">La-Philosophie.com</i></span> (no date).
+        </li>
+        <li>Monk, Ray:
+          <a href="https://www.prospectmagazine.co.uk/magazine/ray-monk-philosophy-biography-jean-van-heijenoort-kahlo-trotsky">He was Trotsky’s sidekick and Kahlo’s lover—Jean van Heijenoort is one of the strangest philosophers you’ve never heard of</a>,
+          <i class="magazine">Prospect</i>, 08.12.2020.
+          <br />Jean van Heijenoort edited <i class="booktitle">From Frege to Gödel: A Source Book in Mathematical Logic, 1879-1931</i>.
+          See also Anita Feferman’s biography <i class="booktitle">From Trotsky to Gödel: The Life of Jean van Heijenoort</i>.
+        </li>
+        <li>Táíwò, Olúfémi O.:
+          <a href="https://www.thephilosopher1923.org/essay-taiwo">Being-in-the-Room Privilege: Elite Capture and Epistemic Deference</a>,
+          <i class="magazine">The Philosopher</i>, <abbr>vol.</abbr> 108, <abbr>no.</abbr> 4.
+          <!--Recommended by philosophy professor Steve Downes: https://twitter.com/SteveMDownes/status/1350515002021617664
+            Author's website: http://www.olufemiotaiwo.com/
+          -->
         </li>
         <li>Sherwood, Harriet:
           <a href="https://www.theguardian.com/uk-news/2018/jan/17/pakistani-humanist-denied-uk-asylum-after-failing-to-identify-plato">Pakistani humanist denied <abbr>UK</abbr> asylum after failing to identify Plato</a>,
