Add: h2: European versus Non-European Philosophy

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2031,6 +2031,28 @@
     </section>
 
     <section>
+      <h2>European versus Non-European Philosophy</h2>
+      <ul>
+        <li>Marimba Ani:
+          <i class="booktitle">Yurugu: An Afrikan-Centered Critique of European Cultural Thought and Behavior</i>. Africa World Press, 1994.
+          (Out of print.)
+        </li>
+        <li>Dabashi, Hamid:
+          <a href="https://www.aljazeera.com/opinions/2013/1/15/can-non-europeans-think/">Can non-Europeans think?</a>,
+          <i class="website">Al Jazeera</i>, 15.01.2013.
+        </li>
+        <li>Dabashi, Hamid:
+          <i class="booktitle">Can Non-Europeans Think?</i>. With a Foreword by Walter Mignolo. Zed Books, 2015. (344 pages)
+          <a href="https://www.zedbooks.net/shop/book/can-non-europeans-think/"><abbr>ISBN</abbr> 9781783604197</a>.
+        </li>
+        <li>Dabashi, Hamid:
+          <a href="https://www.zedbooks.net/blog/posts/fuck-you-zizek/">Fuck You Žižek!</a>,
+          <i class="website">Zed Books</i>, 26.07.2016.
+        </li>
+      </ul>
+    </section>
+
+    <section>
       <h2>Intellectual Impostures</h2>
       <ul>
         <li>In 1997, Alan Sokal &amp; Jean Bricmont published the book
