Add: Stokes et a: Where to start reading philosophy?

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -514,6 +514,25 @@
       <li><span lang="de">Diehl, Ulrich Walter:
         <a href="https://www.ulrich-walter-diehl.de/philosophie/" hreflang="de">Was ist Philosophie?</a></span>.
       </li>
+      <li>Stokes, Patrick; Ivison, Duncan; D'Olimpio, Laura; Sharpe, Matthew:
+        <a href="https://theconversation.com/where-to-start-reading-philosophy-51745">Where to start reading philosophy?</a>,
+        <i class="website">The Conversation</i>, 23.12.2016 (Creative Commons).
+        <br />Four philosophers from Australia suggest a number of philosophy books that you can read without a degree in philosophy.
+        These books are the following:
+        <i class="booktitle">Shame and Necessity</i> by Bernard Williams,
+        <i class="booktitle">The Philosophy Book</i> by Will Buckingham,
+        <i class="booktitle">50 Philosophy ideas you really need to know</i> by Ben Dupré,
+        <i class="booktitle">On Bullshit</i> by Harry G. Frankfurt,
+        <i class="booktitle">The Guardians in Action: Plato the Teacher and the Post-Republic Dialogues from Timaeus to Theaetetus</i> by William H. F. Altman (the second of three volumes) and
+        <!--Volume 1: Plato the Teacher: The Crisis of the Republic (2012): https://rowman.com/ISBN/9780739184417/Plato-the-Teacher-The-Crisis-of-the-Republic
+          Volume 2: https://rowman.com/ISBN/9781498517867/The-Guardians-in-Action-Plato-the-Teacher-and-the-Post-Republic-Dialogues-from-Timaeus-to-Theaetetus
+          Volume 3: The Guardians on Trial: The Reading Order of Plato's Dialogues from Euthyphro to Phaedo: https://rowman.com/ISBN/9781498529518/The-Guardians-on-Trial-The-Reading-Order-of-Plato's-Dialogues-from-Euthyphro-to-Phaedo
+          Volume 4: Ascent to the Good: The Reading Order of Plato’s Dialogues from Symposium to Republic: https://rowman.com/ISBN/9781498574624/Ascent-to-the-Good-The-Reading-Order-of-Plato%E2%80%99s-Dialogues-from-Symposium-to-Republic
+          Volume 5: Ascent to the Beautiful: Plato the Teacher and the Pre-Republic Dialogues from Protagoras to Symposium: https://rowman.com/ISBN/9781793615961/Ascent-to-the-Beautiful-Plato-the-Teacher-and-the-Pre-Republic-Dialogues-from-Protagoras-to-Symposium
+        -->
+        <i class="booktitle">Philosophy as a Way of Life</i> by Pierre Hadot (a collection of essays).
+        <br />The authors do not propose a reading order, though Dupré's book is the most accessible one.
+      </li>
       <li>Sadler, Gregory B.:
         <a href="https://medium.com/@Gregory_Sadler/the-10-best-philosophy-books-for-beginners-6d1326f81d5">The 10 Best Philosophy Books For Beginners</a>,
         <i class="blog">Gregory B. Sadler, Ph.D. | Medium</i>, 11.05.2018.
