Add: Classical Theories in African Religion; History of Religions in the Caribbean

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -332,6 +332,14 @@
           Pour la tirer des impasses et de la stagnation où elle est reléguée de nos jours, Camille Tarot propose ici un bilan critique des œuvres des meilleurs comparatistes, à travers leurs théories si contradictoires de la religion. Huit auteurs principaux sont soumis à examen&nbsp;:
           Émile Durkheim, Marcel Mauss, Mircea Eliade, Georges Dumézil, Claude Lévi-Strauss, René Girard, Pierre Bourdieu et Marcel Gauchet.</q>
         </li>
+        <li>Sindima,Harvey J.:
+          <i class="booktitle">Classical Theories in African Religion</i>. Africa World Press, 2018. (494 pages)
+          <a href="http://africaworldpressbooks.com/classical-theories-in-african-religion-by-harvey-j-sindima/"><abbr>SKU</abbr> 9781569026014</a>.
+        </li>
+        <li>Bisnauth, Dale:
+          <i class="booktitle">History of Religions in the Caribbean</i>. Africa World Press.
+          <a href="http://africaworldpressbooks.com/history-of-religions-in-the-caribbean-by-dale-bisnauth/"><abbr>SKU</abbr> 9780865433427</a>.
+        </li>
         <li>
           <a href="https://www.britannica.com/topic/sacrifice-religion/Theories-of-the-origin-of-sacrifice">Theories of the origin of sacrifice</a>,
           <i class="booktitle">Encylopaedia Britannica</i>.
