Add: Basson: Les fondemants de la philosophie afreicaine; Kodjo-Grandvaux

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2049,6 +2049,15 @@
           <a href="https://www.zedbooks.net/blog/posts/fuck-you-zizek/">Fuck You Žižek!</a>,
           <i class="website">Zed Books</i>, 26.07.2016.
         </li>
+        <li>Basson, Mbog:
+          <span lang="fr"><i class="booktitle">Les fondemants de la philosophie africaine</i>. Montreal: Kiyikaat, 2014.
+          <a href="https://kiyikaat.com/produit/les-fondements-de-la-philosophie-africaine/" hreflang="fr">Les fondemants de la philosophie africaine</a>.</span>
+          <abbr>ISBN</abbr> 978-2-923821-29-0.
+        </li>
+        <li><span lang="fr">Kodjo-Grandvaux, Sévérine:
+          <i class="booktitle">Philosophies africaines</i>. Paris: Présence africaine,</span> 2013.
+          <a href="https://www.presenceafricaine.com/philosophie-afrique-philosophe-africain/799-philosophies-africaines-9782708708433.html" hreflang="fr"><abbr>ISBN</abbr> 9782708708433</a>.
+        </li>
       </ul>
     </section>
 
